--- a/AdvancedCalculator.csproj
+++ b/AdvancedCalculator.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="GraphShape" Version="1.2.1" />
     <PackageReference Include="GraphShape.Controls" Version="1.2.2" />
     <PackageReference Include="LiveCharts.Wpf" Version="0.9.7" />
+    <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="QuikGraph" Version="2.5.0" />
   </ItemGroup>
